Documented pil/pil.h and gui/gui.h, added JOIN message

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-12 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added JOIN message.
+
+	* Documented pil/pil.h and gui/gui.h.
+
 2012-01-10 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added community management to lw6nod.
