--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -36,6 +36,22 @@ Generate a BAR command.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_cmd_generate_join} (lw6nod_info_t * @var{info}, int64_t @var{seq})
+@var{info}:  the node info to use
+
+@var{seq}:  the current seq
+
+Generate a JOIN command. The seq parameter, if 0, means we
+want to request to join to a server. Wether this is a real
+server or a physical client acting as a server is out of
+consideration, 0 means request to join, period. If greater
+than 0, means we are accepting a client, and then the value
+is our current seq, which the client mmust use to calibrate
+its own data.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
 @deftypefun {char *} {lw6msg_cmd_generate_goodbye} (lw6nod_info_t * @var{info})
 @var{info}:  the node info to use
 
@@ -104,6 +120,16 @@ Analyzes a FOO message.
 @var{msg}:  the message to analyse
 
 Analyzes a BAR message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6msg_cmd_analyse_join} (lw6nod_info_t ** @var{info}, int64_t * @var{seq}, char * @var{msg})
+@var{info}:  will contain (remote) node info on success
+
+@var{msg}:  the message to analyse
+
+Analyzes a JOIN message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
