--- a/liquidwar6/doc/vox-doxygen.texi
+++ b/liquidwar6/doc/vox-doxygen.texi
@@ -4,7 +4,7 @@
 @deftp {Struct} {lw6vox_renderer_s}
 
     
-    
+Voxel renderer object, not implemented yet.     
 @end deftp
 
 @defcv {Member} {lw6vox_renderer_s} {dummy}
@@ -13,7 +13,7 @@
 @strong{Definition:} @code{int lw6vox_renderer_s::dummy}
 
 
-        
+Todo...         
         
 @end defcv
 
