--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-19 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed JOIN handling, test was broken because single threaded.
+
 2012-01-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added JOIN message.
