--- a/liquidwar6/doc/sim-doxygen.texi
+++ b/liquidwar6/doc/sim-doxygen.texi
@@ -4,7 +4,7 @@
 @deftp {Struct} {lw6sim_results_s}
 
     
-    
+Results for the game simulation, contains basic statistics about who won the games.     
 @end deftp
 
 @defcv {Member} {lw6sim_results_s} {nb_teams}
@@ -13,7 +13,7 @@
 @strong{Definition:} @code{int lw6sim_results_s::nb_teams}
 
 
-        
+Number of teams that were tested.         
         
 @end defcv
 
@@ -24,7 +24,7 @@
 
 
         
-        
+Absolute score. The unit is arbitrary and depends on the game type, the number of games. Well, it means nothing in itself, each team needs to be compared to the other ones.         
 @end defcv
 
 @defcv {Member} {lw6sim_results_s} {percent}
@@ -34,7 +34,7 @@
 
 
         
-        
+Score as a percentage. This is based on several games played, the higher it is the stronger the team is.         
 @end defcv
 
 
