--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -298,23 +298,6 @@ to other peers and are, by nature, dynamic.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_update_serialized} (lw6p2p_node_t * @var{node}, int64_t @var{serialized_seq}, char * @var{serialized_level}, char * @var{serialized_game_struct}, char * @var{serialized_game_state})
-@var{node}:  node to update
-
-@var{serialized_seq}:  sequence this serialized data corresponds to
-
-@var{serialized_level}:  level object serialized serialized as an hexa string
-
-@var{serialized_game_struct}:  game struct object serialized as an hexa string
-
-@var{serialized_game_state}:  game state object serialized as an hexa string
-
-Updates the (rather heavy) serialized objects for the game, which are
-required to transmit game context to peers over the network.
-
-@strong{Return value:}  1 on success, 0 on failure
-@end deftypefun
-
 @deftypefun {void} {lw6p2p_node_calibrate} (lw6p2p_node_t * @var{node}, int64_t @var{timestamp}, int64_t @var{seq})
 @var{node}:  the object to calibrate
 
@@ -322,10 +305,55 @@ required to transmit game context to peers over the network.
 
 @var{seq}:  the round expected to be returned with this ticks value
 
-Calibrates the node, that is, initializes it so that subsequent calls
-to @code{lw6p2p_node_get_round} return consistent values.
+Calibrates the node, so that sequence numbering is consistent
+accross nodes.
 
 @strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_is_dump_needed} (lw6p2p_node_t * @var{node})
+@var{node}:  node to query
+
+Returns true (1) if the local node needs to send a DUMP message.
+A DUMP message will basically reset level, game struct, game state,
+it's typically sent when a new player is connected. This function
+will return true once then always 0 so one should really act and
+do something whenever it's called and returns 1.
+
+@strong{Return value:}  1 if DUMP must be sent.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_put_local_msg} (lw6p2p_node_t * @var{node}, char * @var{msg})
+@var{node}:  node object to use
+
+@var{msg}:  message
+
+Puts a message in the object. The message will be splitted into
+several atoms if needed, it can be arbitrary long.
+
+@strong{Return value:}  1 on success, 0 on error
+@end deftypefun
+
+@deftypefun {char *} {lw6p2p_node_get_next_reference_msg} (lw6p2p_node_t * @var{node})
+@var{node}:  node to query
+
+Get the next waiting reference msg. This is used to maintain
+the stable reference game state we can rely upon. One is
+supposed to call this until it returns NULL, then switch
+draft messages.
+
+@strong{Return value:}  newly allocated string, must be freed.
+@end deftypefun
+
+@deftypefun {char *} {lw6p2p_node_get_next_draft_msg} (lw6p2p_node_t * @var{node})
+@var{node}:  node to query
+
+Get the next waiting draft msg. This is used to maintain
+the anticipated draft game state we use for drawing. One is
+supposed to call this after all reference messages have been
+treated.
+
+@strong{Return value:}  newly allocated string, must be freed.
 @end deftypefun
 
 @deftypefun {int} {lw6p2p_test} (int @var{mode})
